HTML about me code
Adding the skeleton for About me page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+        <title>'About Me'</title>
+    </head>
+    <body>
+        <header>
+           <!--Logo img tag here-->
+           <p>Amanda Sena</p>
+           <ul>
+                <li>PORTFOLIO</li>
+                <li>ABOUT</li>
+                <li>RESUME</li>
+                <li>LINKEDIN</li>
+                <li>BEHANCE</li>
+           </ul>
+        </header>
+        <section>
+            <div class="hero"></div>
+                <p>Hi There!</p>
+                <p>I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
+                <img src="/images/PXL_20220529_213040253.jpg">
+           <div class="body"></div>
+           <p>I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
+           <p>I’ve been able to lead  digital security enhancement at a global level, reorganize regulatory management nationally and manage bulk movements of gasoline through hurricanes - always with a design framework in mind. My nontraditional path has made me fearless in getting to the bottom of any problem and willing to talk to anyone.</p>
+           <button>Check out my work</button>
+        </section>
+        <footer>
+            <p>Let's Chat!</p>
+            <!--img icon tags here-->
+        </footer>
+        <script src="" async defer></script>
+    </body>
 </html>
