--- a/index.html
+++ b/index.html
@@ -10,34 +10,44 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/style.css">
         <title>'About Me'</title>
     </head>
     <body>
         <header>
-           <!--Logo img tag here-->
-           <p>Amanda Sena</p>
-           <ul>
-                <li>PORTFOLIO</li>
-                <li>ABOUT</li>
-                <li>RESUME</li>
-                <li>LINKEDIN</li>
-                <li>BEHANCE</li>
-           </ul>
+            <div class="logoName">
+                <!--Logo img tag here-->
+                <h1>Amanda Sena</h1>
+            </div>
+            <nav>
+                <a href="">PORTFOLIO</a>
+                <a href="">ABOUT</a>
+                <a href="">RESUME</a>
+                <a href="">LINKEDIN</a>
+                <a href="">BEHANCE</a>
+            </nav>
         </header>
         <section>
-            <div class="hero"></div>
-                <p>Hi There!</p>
-                <p>I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
+            <div class="hero">
+                <div id="heroText">
+                    <h1>Hi There!</h1>
+                    <p>I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
+                </div>
                 <img src="/images/PXL_20220529_213040253.jpg">
-           <div class="body"></div>
-           <p>I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
-           <p>I’ve been able to lead  digital security enhancement at a global level, reorganize regulatory management nationally and manage bulk movements of gasoline through hurricanes - always with a design framework in mind. My nontraditional path has made me fearless in getting to the bottom of any problem and willing to talk to anyone.</p>
-           <button>Check out my work</button>
+            </div>
+            <div class="body">
+                <p>I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
+                <p>I’ve been able to lead  digital security enhancement at a global level, reorganize regulatory management nationally and manage bulk movements of gasoline through hurricanes - always with a design framework in mind. My nontraditional path has made me fearless in getting to the bottom of any problem and willing to talk to anyone.</p>
+                <button>Check out my work</button>
+            </div>
         </section>
         <footer>
             <p>Let's Chat!</p>
-            <!--img icon tags here-->
+            <div class="socialIcons">
+                <img src="/images/envelope.png">
+                <img src="/images/linkedin.png">
+                <img src="/images/behance.png">
+            </div>
         </footer>
         <script src="" async defer></script>
     </body>
