--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/style.css">
         <title>'About Me'</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header>
@@ -31,22 +38,22 @@
             <div class="hero">
                 <div id="heroText">
                     <h1>Hi There!</h1>
-                    <p>I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
+                    <p class="body1">I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
                 </div>
                 <img src="/images/PXL_20220529_213040253.jpg">
             </div>
             <div class="body">
-                <p>I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
-                <p>I’ve been able to lead  digital security enhancement at a global level, reorganize regulatory management nationally and manage bulk movements of gasoline through hurricanes - always with a design framework in mind. My nontraditional path has made me fearless in getting to the bottom of any problem and willing to talk to anyone.</p>
+                <p class="body1">I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
+                <p class="body1">I’ve been able to lead  digital security enhancement at a global level, reorganize regulatory management nationally and manage bulk movements of gasoline through hurricanes - always with a design framework in mind. My nontraditional path has made me fearless in getting to the bottom of any problem and willing to talk to anyone.</p>
                 <button>Check out my work</button>
             </div>
         </section>
         <footer>
-            <p>Let's Chat!</p>
-            <div class="socialIcons">
-                <img src="/images/envelope.png">
-                <img src="/images/linkedin.png">
-                <img src="/images/behance.png">
+            <p class="footerText">Let's Chat!</p>
+            <div class="socialIconsBar">
+                <img class="socialIcon" src="/images/envelope.png">
+                <img class="socialIcon" src="/images/linkedin.png">
+                <img class="socialIcon" src="/images/behance.png">
             </div>
         </footer>
         <script src="" async defer></script>
