Adding body content formatting

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </head>
     <body>
         <header>
-            <div class="logoName">
-                <!--Logo img tag here-->
+            <div id="logoName">
+                <img id="logo" src="/images/3ColorLogo.jpg">
                 <h1>Amanda Sena</h1>
             </div>
             <nav>
@@ -40,7 +40,9 @@
                     <h1>Hi There!</h1>
                     <p class="body1">I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
                 </div>
-                <img src="/images/PXL_20220529_213040253.jpg">
+                <div id="imageBox">
+                    <img id="selfie" src="/images/PXL_20220529_213040253.jpg">
+                </div>
             </div>
             <div class="body">
                 <p class="body1">I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
