added background styling and breakpoints

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header>
             <div id="logoName">
                 <img id="logo" src="/images/3ColorLogo.jpg">
-                <h1>Amanda Sena</h1>
+                <h1 id="name">Amanda Sena</h1>
             </div>
             <nav>
                 <a href="">PORTFOLIO</a>
@@ -38,16 +38,17 @@
             <div class="hero">
                 <div id="heroText">
                     <h1>Hi There!</h1>
-                    <p class="body1">I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that connect users to the brand.</p>
+                    <p class="body1">I’m Amanda Sena, a UX / UI Designer and PM based in Chicago. I specialize in building designs that <em>connect users to the brand.</em></p>
+                    <div id="workButton">
+                        <button>Check out my work</button>
+                    </div>
                 </div>
                 <div id="imageBox">
                     <img id="selfie" src="/images/PXL_20220529_213040253.jpg">
                 </div>
             </div>
-            <div class="body">
-                <p class="body1">I am a lifelong learner and this has taken my career on a wild journey! I’ve found I keep returning to work that allows me to create efficiencies and affect positive change for the end user.</p>
-                <p class="body1">I’ve been able to lead  digital security enhancement at a global level, reorganize regulatory management nationally and manage bulk movements of gasoline through hurricanes - always with a design framework in mind. My nontraditional path has made me fearless in getting to the bottom of any problem and willing to talk to anyone.</p>
-                <button>Check out my work</button>
+            <div class="breakLine">
+                <hr>
             </div>
         </section>
         <footer>
