Removing slashes so images load

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <header>
             <div id="logoName">
-                <img id="logo" src="/images/3ColorLogo.jpg">
+                <img id="logo" src="images/3ColorLogo.jpg">
                 <h1 id="name">Amanda Sena</h1>
             </div>
             <nav>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div id="imageBox">
-                    <img id="selfie" src="/images/PXL_20220529_213040253.jpg">
+                    <img id="selfie" src="images/PXL_20220529_213040253.jpg">
                 </div>
             </div>
             <div class="breakLine">
@@ -48,9 +48,9 @@
         <footer>
             <p class="footerText">Let's Chat!</p>
             <div class="socialIconsBar">
-                <img class="socialIcon" src="/images/envelope.png">
-                <img class="socialIcon" src="/images/linkedin.png">
-                <img class="socialIcon" src="/images/behance.png">
+                <img class="socialIcon" src="images/envelope.png">
+                <img class="socialIcon" src="images/linkedin.png">
+                <img class="socialIcon" src="images/behance.png">
             </div>
         </footer>
         <script src="" async defer></script>
