extended hero to navigation

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
                 <a href="">LINKEDIN</a>
                 <a href="">BEHANCE</a>
             </nav>
+            
         </header>
         <section>
+            <div>
+                <img id="rectangle" src="images/top_rectangle_background.png">
+            </div>
             <div class="hero">
                 <div id="heroText">
                     <h1>Hi There!</h1>
